# GadgetronOnlineClass

./: README.md
Courses/Day1/Lecture1/: README.md
Courses/Day1/Lecture2/: README.md
Courses/Day1/Lecture2/demo/: config.final.xml  config.xml
Courses/Day1/Lecture2/visualization/: visualization.py
Courses/Day1/Lecture3/: README.md
Courses/Day1/Lecture3/Part1/: README.md
Courses/Day1/Lecture3/Part2/: README.md
Courses/Day1/Lecture3/Part3/: README.md
Courses/Day2/Lecture1/correction/: EPI_trapezoid_regridding.m  FFTKSpace2XSpace.m  MRD_EPI_reconstruction.m  MRD_EPI_reconstruction.mlx
Courses/Day2/Lecture2/: README.md
Courses/Day2/Lecture3/: README.md
Courses/Day3/Lecture1/: README.md
Courses/Day3/Lecture1/demo/: config.final.xml  config.xml
Courses/Day3/Lecture2/: README.md
Courses/Day3/Lecture2/Demo1_Cartesian/: Demo 1 MP2RAGE reconstruction.md  README.md
Courses/Day3/Lecture3/: README.md
Courses/Day4/Lecture1/: AcquisitionBuffer.h  CMakeLists.txt  LICENSE  README.md  simple_recon.xml  spiral_recon.xml  spiral_recon_sense.xml
Courses/Day4/Lecture1/Cartesian/: AccumulateGadget.cpp  FFTRecon.cpp
Courses/Day4/Lecture1/Spiral/: NonCartesianGridding.cpp  NonCartesianSENSE.cpp  NonCartesianSenseOperator.h  SpiralAccumulateGadget.cpp  SpiralBuffer.h
Courses/Day4/Lecture2/: README.md
Courses/Day4/Lecture3/: README.md
Installation/: README.md  index.md
Interactive-Sessions/: README.md
Material/Day1/Lecture1/: README.md
Material/Day1/Lecture3/: README.md
Preparation/: README.md
Visio-Modalities/: README.md
(+34 files in other folders)
